--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 Flask==0.10.1
+Flask-Bootstrap==3.1.0.1
+Flask-OAuthlib==0.4.2
+Flask-SQLAlchemy==1.0
+Flask-Script==0.6.6
+Flask-WTF==0.9.4
 Jinja2==2.7.2
 MarkupSafe==0.18
+SQLAlchemy==0.9.1
+WTForms==1.0.5
 Werkzeug==0.9.4
 itsdangerous==0.23
+oauthlib==0.6.1
+psycopg2==2.5.2
 wsgiref==0.1.2
-flask-oauthlib
