--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Bootstrap==3.1.0.1
 Flask-OAuthlib==0.4.2
 Flask-SQLAlchemy==1.0
 Flask-Script==0.6.6
+Flask-Testing==0.4
 Flask-WTF==0.9.4
 Jinja2==2.7.2
 MarkupSafe==0.18
