--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-Flask==0.10.1
 Flask-Bootstrap==3.1.0.1
+Flask-Migrate==1.2.0
 Flask-OAuthlib==0.4.2
 Flask-SQLAlchemy==1.0
 Flask-Script==0.6.6
 Flask-WTF==0.9.4
+Flask==0.10.1
 Jinja2==2.7.2
+Mako==0.9.1
 MarkupSafe==0.18
 SQLAlchemy==0.9.1
 WTForms==1.0.5
 Werkzeug==0.9.4
+alembic==0.6.4
 itsdangerous==0.23
 oauthlib==0.6.1
 psycopg2==2.5.2
