--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,10 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.6",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.0",
     "font-awesome": "~4.5.0",
     "jquery": "~2.2.0",
-    "lodash": "~4.2.1"
+    "lodash": "~4.2.1",
+    "moment": "~2.11.2"
   }
 }
